Clean up authentication setup
- Remove GitHub token references from .zshrc
- Use gh CLI for authentication instead of env vars
- Rely on credential helpers (gh + osxkeychain) for Git operations

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,8 +3,10 @@
 	email = lars.tice@gmail.com
 [credential]
 	helper = osxkeychain
+	helper = \\!/opt/homebrew/bin/gh auth git-credential
 [credential "https://github.com"]
 	username = lars-tice
+	helper = 
 	helper = !/opt/homebrew/bin/gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
