Add tmux configuration and improve terminal workflow
- Added tmux with custom keybindings and Tokyo Night theme
- Configured Ghostty to auto-start tmux on launch
- Added font size adjustment keybindings (Cmd+/- and Cmd+0)
- Simplified Ghostty to use tmux for tabs instead of native tabs
- Added instant pane/window kill commands without confirmation
- Fixed AeroSpace resize mode binding (now Option+Shift+E)
- Added tmux aliases for session management

--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -99,3 +99,8 @@ run = 'layout floating'
 if.app-id = 'com.apple.finder'
 if.window-title-regex-substring = 'Copy|Move'
 run = 'layout floating'
+
+# Keep Ghostty in its current state when creating tabs
+[[on-window-detected]]
+if.app-id = 'com.mitchellh.ghostty'
+run = []  # Don't auto-tile new Ghostty windows
