--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -11,9 +11,9 @@ theme = TokyoNight
 font-family = JetBrainsMonoNerdFontMono-Regular
 font-size = 14
 
-# Tab Configuration
-# Show tab bar even with single tab
-macos-titlebar-style = tabs
+# Window Configuration
+# Use native titlebar without tabs (we'll use tmux for multiplexing)
+macos-titlebar-style = native
 
 # Additional recommended settings
 cursor-style = block
@@ -35,3 +35,13 @@ copy-on-select = true
 
 # macOS specific settings
 macos-option-as-alt = true
+
+# Start tmux automatically when Ghostty opens
+command = tmux new-session -A -s main
+
+# Font size keybindings
+keybind = cmd+plus=increase_font_size:1
+keybind = cmd+minus=decrease_font_size:1
+keybind = cmd+0=reset_font_size
+# Also support cmd+= (no shift needed for plus)
+keybind = cmd+equal=increase_font_size:1
