Fix GNOME terminal setting and add macOS Ghostty shortcut
Linux (GNOME):
- Replace community.general.dconf module with gsettings shell command
- Removes psutil Python dependency requirement
- Maintains Python-free architecture
- Uses same command as original install-cross-platform.sh:123

macOS (AeroSpace):
- Add alt-return keybinding to launch Ghostty terminal
- Uses 'exec-and-forget open -a Ghostty' command
- Follows i3/sway tiling window manager convention
- Ghostty won't auto-tile (per existing config lines 104-106)

Both changes maintain cross-platform consistency while respecting
platform-specific terminal launching mechanisms.

--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -75,6 +75,9 @@ alt-shift-9 = 'move-node-to-workspace 9'
 # Reload config
 alt-shift-r = 'reload-config'
 
+# Launch terminal
+alt-return = 'exec-and-forget open -a Ghostty'
+
 # Layout changes
 alt-t = 'layout tiles horizontal vertical'
 
