Add Linux Security Tools section (git-crypt, gnupg)
- Add security tools installation for Linux (Debian/Ubuntu)
- Installs git-crypt and gnupg via apt
- Mirrors macOS security tools section for cross-platform consistency
- Required for encrypted credential management in A4C-AppSuite repo

This ensures both macOS and Linux have the same security tooling
for handling git-crypt encrypted files.

--- a/playbook.yml
+++ b/playbook.yml
@@ -139,6 +139,18 @@
         state: present
 
     # ============================================================================
+    # Linux: Security Tools
+    # ============================================================================
+    - name: Install security tools (Linux)
+      when: ansible_os_family == "Debian"
+      become: yes
+      apt:
+        name:
+          - gnupg
+          - git-crypt
+        state: present
+
+    # ============================================================================
     # Linux: Development Tools
     # ============================================================================
     - name: Install development tools (Linux)
