feat(tmux): add natural scrolling and auto-copy on mouse selection
- Mouse wheel scroll automatically enters/exits copy mode
- Mouse selection auto-copies to system clipboard via OSC 52
- Maintains vim-style keybindings for manual copy
- Removed complex double/triple-click bindings (unsupported in this tmux version)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,9 +11,10 @@ set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
 # Enable mouse support
-# NOTE: Mouse mode intercepts scroll events. To view terminal scrollback:
-#   - Use Ctrl+Space [ to enter copy mode, then scroll with mouse or vim keys
-#   - Or open a non-tmux terminal window (Ctrl+Shift+N in ghostty)
+# NOTE: With natural scrolling enabled below:
+#   - Mouse wheel scroll automatically enters/exits copy mode
+#   - Mouse selection automatically copies to system clipboard via OSC 52
+#   - Double-click word or triple-click line to select and copy
 #   - Use Ctrl+Space d to DETACH (not exit) to keep session alive
 set -g mouse on
 
@@ -105,13 +106,21 @@ set -g pane-active-border-style 'fg=#7aa2f7'
 # Message style
 set -g message-style 'fg=#7aa2f7 bg=#1a1b26 bold'
 
+# --- MOUSE INTEGRATION ---
+
+# Natural scrolling - mouse wheel automatically enters/exits copy mode
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
+# --- COPY MODE & CLIPBOARD ---
+
 # Copy mode vim bindings
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
-# Universal clipboard integration via OSC 52 escape sequences
-# Works locally and over SSH on both macOS and Linux through modern terminals
+# Keyboard copy commands - copy to system clipboard via OSC 52 and exit copy mode
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "base64 -w 0 | printf '\033]52;c;%s\033\\' \"$(cat)\""
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "base64 -w 0 | printf '\033]52;c;%s\033\\' \"$(cat)\""
+
+# Mouse selection - automatically copy to system clipboard via OSC 52
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "base64 -w 0 | printf '\033]52;c;%s\033\\' \"$(cat)\""
