Added support for determining if the attached tmux session sourced from an ssh initiated session ran wayland or X11

--- a/playbook.yml
+++ b/playbook.yml
@@ -248,7 +248,8 @@
           - git
           - stow
           - neovim
-          - xclip  # Clipboard integration for tmux
+          - xclip  # Clipboard integration for tmux (X11)
+          - wl-clipboard  # Clipboard integration for tmux (Wayland)
         state: present
 
     # ============================================================================
