--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -130,9 +130,16 @@ if-shell "uname | grep -q Darwin" {
     bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 }
 
-# Linux clipboard integration  
+# Linux clipboard integration (Wayland & X11)
 if-shell "uname | grep -q Linux" {
-    bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
-    bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
-    bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+    # Prefer wl-copy (Wayland) if available, fallback to xclip (X11)
+    if-shell "command -v wl-copy" {
+        bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+        bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
+        bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "wl-copy"
+    } {
+        bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+        bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+        bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+    }
 }
