--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -29,8 +29,12 @@ font-feature = calt
 # Scrollback
 scrollback-limit = 10000
 
+# Clipboard Read and Write
+clipboard-read = allow
+clipboard-write = allow
+
 # Copy on select
-copy-on-select = true
+copy-on-select = clipboard
 
 # Cross-platform settings with fallbacks
 # Note: Platform-specific overrides are handled by @macos/@linux stow packages
